// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expenses Summary with 1 expense 1`] = `
<div>
  <h4>
    Viewing 
    1
     
    expense
     totalling 
    235
  </h4>
</div>
`;

exports[`should render Expenses Summary with more than 1 expense 1`] = `
<div>
  <h4>
    Viewing 
    3
     
    expenses
     totalling 
    114195
  </h4>
</div>
`;
